# parall_prog

./: README.md  cam.py  cm_double.bash  cm_float.bash  m_double.bash  m_float.bash  sin_sum.cpp
1/: README.md  cm_double.bash  cm_float.bash  m_double.bash  m_float.bash  sin_sum.cpp
1/cmake/: CMakeLists.txt
1/make/: DMakefile  FMakefile
2.1/: CMakeLists.txt  DGEMV.c
2.2/: CMakeLists.txt  integral.c
2.3/: CMakeLists.txt  README.md  ir_var1.c  ir_var2.c  iteration.c
cmake/: CMakeLists.txt
make/: DMakefile  FMakefile  Makefile
